// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-dropdown can open dropdown panel with basic options 1`] = `
<div
  class="Vlt-dropdown Vlt-dropdown--expanded"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown has label, second option is selected, selection and label shown 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <span>
      
      Pick one
      <span>
        :
      </span>
    </span>
     
    <span
      class="Vlt-dropdown__selection"
    >
      
      yellow
    
    </span>
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown has label, second option is selected, selection not shown 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <span>
      
      Pick one
      <!---->
    </span>
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown has label, second option is selected, selection shown 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <span
      class="Vlt-dropdown__selection"
    >
      
      yellow
    
    </span>
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown renders correctly 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul />
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown renders correctly with label "Pick one" 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <span>
      
      Pick one
      <!---->
    </span>
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul />
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown second option is selected and selection is shown 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <span
      class=""
    >
      
      yellow
    
    </span>
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li>
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
